# coding-agent

./: .env.example  .gitignore  Dockerfile  GEMINI.md  LICENSE  README.md  docker-compose.yml  fleet_config.json  manifest.json
app/: README.md  app.py  app_interaction.py  pyproject.toml  requirements.txt
app/tests/: test_app.py
prompts/: backend-specialist.md  data-engineering-specialist.md  frontend-specialist.md  git-specialist.md  infrastructure-specialist.md  product-manager-specialist.md  system-design-specialist.md  testing-specialist.md
scripts/: entrypoint.sh  init-worktree.sh  setup-slack.sh
