[project]
name = "coding-agent"
version = "0.1.0"
description = "Autonomous Engineering Fleet powered by Gemini CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
    "slack-bolt>=1.18.1",
    "slack-sdk>=3.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.3",
    "ty",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ty]
# Default configuration
